--- a/.travis.yml
+++ b/.travis.yml
@@ -25,5 +25,6 @@ deploy:
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
   local_dir: dist
+  target_branch: gh-pages
   on:
     branch: master
