--- a/package.json
+++ b/package.json
@@ -81,7 +81,8 @@
     "axios": "^0.21.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
