--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
     "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
-    "setup": "npm install && npm run validate"
+    "setup": "npm install && npm run validate",
+    "start": "serve -s dist"
   },
   "jest-runner-eslint": {
     "cliOptions": {
@@ -82,7 +83,8 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^5.3.0",
+    "serve": "^12.0.1"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
